--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -5,7 +5,6 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-
   border: none;
   transition: 0.4s ease-in;
 }
@@ -22,7 +21,9 @@
 }
 
 .container h1 {
-  padding: 50px;
+  padding: 50px 0px;
+  margin: 0;
+  margin-top: -30px;
 }
 
 .btn {
